--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <button class="entervr" id="entervr" value="Enter VR" disabled>VR</button>
         <button class="enterar" id="enterar" value="Enter AR" disabled>AR</button>
         <div class="webxr-link">Using <a href="https://github.com/De-Panther/unity-webxr-export" target="_blank" title="WebXR Export">WebXR Export</a></div>
-        <div class="title">Stream</div>
+        <div class="title">Stream Under Construction</div>
       </div>
     </div>
     <script>
@@ -51,5 +51,8 @@
         document.dispatchEvent(new CustomEvent('toggleVR', {}));
       }, false);
     </script>
+    
+    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/WpMQDLrP-4g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    
   </body>
 </html>
