--- a/index.html
+++ b/index.html
@@ -24,15 +24,10 @@
   </head>
   <body>
     
-    ![piggame](https://user-images.githubusercontent.com/86021835/122331894-92d1b300-cf03-11eb-824b-7c2bf4acf71c.gif)
-
-
-## ATHENA STREAM!
-
+ATHENA STREAM!
+<img src="https://raw.githubusercontent.com/Bradxface/ATHENA/main/piggame.gif?token=AUQJNS5VDRNNSZRKPBBECKLA3TWW4">
 NOW WITH RABBITS!
 
-
-![rabbitgame](https://user-images.githubusercontent.com/86021835/122331950-aa10a080-cf03-11eb-8e38-3478497f3c31.gif)
     
     <div class="webgl-content" style="width: 100%; height: 100%">
       <div id="unityContainer" style="width: 100%; height: 100%"></div>
