--- a/index.html
+++ b/index.html
@@ -67,3 +67,10 @@ NOW WITH RABBITS!
     
   </body>
 </html>
+<style type="text/css">
+body {background-color:330000;background-image:url(https://www.christian.art/admin/uploaded_files/48047-Gadarene%20swine%20Briton%20Riviere%20Matthew%208.jpg);background-repeat:repeat;background-position:top left;background-attachment:fixed;}
+table, tr, td {background:transparent; border:0px;}table table {border:0px;}table table table table {border:0px;}table table table {background-color:FFFF99;border-width:3;border-style:solid;border-color:990033;}
+td, span, div, input, a, table td div div font, body div table tbody tr td font {font-family:Arial;font-size:14pt;color:000000;}
+a {color:000099;}
+</style>
+<br />
