--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@ input.html-text-box {background-color:ffffff;font-family:Helvetica;font-size:14p
 <p><input type="submit" value="Submit" class="html-text-box"><input type="reset" value="Reset" class="html-text-box"></p>
 </form>
     
+ <iframe width="560" height="315" src="https://edge-player-beta.thetatoken.org/?streamId=0x964a0b4f1bec3659e554db67f9bf71ce92e94265
+" frameborder="0" allowfullscreen></iframe>
+    
   </body>
 </html>
 <style type="text/css">
