--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@ NOW WITH RABBITS!
     <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/WpMQDLrP-4g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     
 <style type="text/css">
-textarea.html-text-box {background-color:ffffff;background-repeat:no-repeat;background-attachment:fixed;border-width:2;border-style:solid;border-color:ff0000;font-family:Helvetica;font-size:14pt;color:ff0000;}
+textarea.html-text-box {background-color:ffffff;background-repeat:no-repeat;background-attachment:fixed;border-width:2;border-style:solid;border-color:ff0000;font-family:Helvetica;font-size:20pt;color:ff0000;}
 input.html-text-box {background-color:ffffff;font-family:Helvetica;font-size:14pt;color:000000;}
 </style>
 <form method="post" action="">
-<textarea name="comments" cols="20" rows="10" class="html-text-box">Welcome to the Athena streaming program!!!  Robotic farming, surveillance, VR, security, automation, uncensored</textarea>
+<textarea name="comments" cols="20" rows="10" class="html-text-box">DIYScientific Presents</textarea>
 <p><input type="submit" value="Submit" class="html-text-box"><input type="reset" value="Reset" class="html-text-box"></p>
 </form>
     
