--- a/index.html
+++ b/index.html
@@ -71,7 +71,10 @@ textarea.html-text-box {background-color:ffffff;background-repeat:no-repeat;back
 input.html-text-box {background-color:ffffff;font-family:Helvetica;font-size:14pt;color:000000;}
 </style>
 <form method="post" action="">
-<textarea name="comments" cols="20" rows="10" class="html-text-box">DIYScientific Presents</textarea>
+<textarea name="comments" cols="20" rows="10" class="html-text-box">DIYScientific Presents
+  
+    Unity doesn't like me, so the vr stream is currently on hold
+     The Theta streams are inactive at this time.  will update this text if they are online</textarea>
 <p><input type="submit" value="Submit" class="html-text-box"><input type="reset" value="Reset" class="html-text-box"></p>
 </form>
     
