--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 ATHENA STREAM!
     
 <img src="https://github.com/Bradxface/ATHENA/blob/main/piggame.gif?raw=true">
-    
+<img src="https://github.com/Bradxface/ATHENA/blob/main/IMG_20211013_003805571_2.jpg?raw=true">
 NOW WITH RABBITS!
 
 <img src="https://github.com/Bradxface/ATHENA/blob/main/rabbitgame.gif?raw=true">    
